# FreiKey

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .pnp.cjs  .prettierrc  .yarnrc.yml  LICENSE  README.md  Toolchain-Adafruit-nRF52480.cmake  Toolchain-Teensy40.cmake  fix_compile_commands.js  package.json
.husky/: pre-commit
.yarn/: .gitignore
WiredSketch/: CoreCapability.hpp
WiredSketch/Left-nRF52840/: CoreCapability.hpp  Left-nRF52840.ino
WiredSketch/Left-rp2040/: Left-rp2040.ino
WiredSketch/Right-nRF52840/: CoreCapability.hpp  Right-nRF52840.ino
WiredSketch/Right-rp2040/: Right-rp2040.ino
WiredSketchLeft/: CMakeLists.txt  WiredSketchLeft.ino
WiredSketchLeft/Left-nRF52840/: Left-nRF52840.ino
WiredSketchLeft/Left-rp2040/: Left-rp2040.ino
WiredSketchLeft/rp2040/: rp2040.ino
WiredSketchRight/: WiredSketchRight.ino
WiredSketchRight/nRF52480/: nRF52480.ino
WiredSketchRight/rp2040/: rp2040.ino
docs/: FreiKey Architecture.excalidraw  Key Position Helper.xlsx  battery-log.txt  info.txt
src/: 3piece.mak  Adafruit  CMakeLists.txt  CalcGrammar.yy  CalcLexer.cpp  CalcLexer.ll  CalcParsing.cpp  CalcScanner.h  CalcTokenization.cpp  Calculator.cpp  GFX  ImageComp.sln  ImageComp.vcxproj  ImageComp.vcxproj.filters  Interrupts-example.ino  Karbon-retool.txt  Makefile  NeoPixel  SSD1306  TinyUSB  adafruit-make-config.json  af_nrf52.mk  af_nrf52.win  apple2.mk  ardfs.cpp  ardfs.h  ardfs_test.cpp  battery.cpp  betterfly.cpp  betterfly.mak  bigscreen.cpp  bitmap.cpp  boardio.cpp  build.sh  callbacks.cpp  clean-build.sh  client-comm.cpp  client.cpp  comm.cpp  dbgcfg.cpp  (+115 more)
src/Interrupts-example/: Interrupts-example.ino
src/bitmaps/: amy.cpp  amy.h  angerry.cpp  angerry.h  batman.cpp  batman.h  haha.cpp  haha.h  hug.cpp  like.cpp  linux.cpp  linux.h  love.cpp  mac.cpp  mac.h  mad.cpp  mad.h  sad.cpp  win.cpp  win.h  wow.cpp  wow.h
src/include/: Button.h  CalcExpr.h  CalcScanner.h  Calculator.h  ValExpr.h  action.h  actions.h  battery.h  betterfly-keymap.h  bit_array.h  bitmap.h  bitstuff.h  boardio.h  callbacks.h  client.h  comm.h  crtp.h  dbgcfg.h  debounce.h  delay.h  disp_globals.h  disp_uart.h  display.h  dongle.h  dongleio.h  drawing.h  enumhelpers.h  enumtypes.h  freikeys-keymap.h  general.h  generalstate.h  globals.h  hardware.h  helpers.h  host-comm.h  image.h  imgencoder.h  kbclient.h  kbreporter.h  keyhelpers.h  (+30 more)
src/include/adafruit_nrf52/: mpu.h
src/include/betterfly/: keymap.h
src/include/bigscreen/: hwconfig.h  keymap.h
src/include/freikeys/: board-instance.h  keymap.h
src/include/fs/: dir.h  path.h
src/include/karbon/: basekeys.h  board-instance.h  keymap.h
src/include/laptype/: board-instance.h  boardio.h  getscan.h  hwconfig.h  keymap.h
src/include/localscan/: scanner.h
src/include/mock/: board-instance.h  boardio.h  hwconfig.h  keymap.h  mpu.h  mpusys.h  scanner.h
src/include/modules/: board-instance.h  hwconfig.h
src/include/teensy/: getscan.h  mpu.h  mpusys.h
src/include/threepiece/: board-instance.h  boardio.h  getscan.h  hwconfig.h  keymap.h
src/libs/: Adafruit  GFX  NeoPixel  SSD1306  TinyUSB
src/modules/: standalone.mk
src/modules/calculator/: .gitignore  CMakeLists.txt  CalcContext.cpp  CalcExpr.cpp  CalcGrammar.yy  CalcHandler.cpp  CalcLexer.cpp  Calculator.cpp  Calculator.h  Makefile  include.mk
src/modules/calculator/headers/: CalcContext.h  CalcLexer.h
src/modules/calculator/include/: CalcContext.h  CalcExpr.h  CalcLexer.h  Calculator.h
src/modules/display/: CMakeLists.txt  display.cpp  display.h  include.mk
src/modules/editline/: CMakeLists.txt  Makefile  editline.cpp  editline.h  include.mk
src/modules/images/: CMakeLists.txt  Makefile  image.cpp  image.h  imgdec_pal.cpp  imgenc_pal.cpp  imgenc_prle.cpp  imgenc_rle.cpp  imgencoder.cpp  include.mk
src/modules/images/bitmaps/: amy.cpp  amy.h  apple-ii-240-86.raw  apple-ii.cpp  apple-ii.h  batman.h  calc.cpp  calc.h  hug.cpp  hug.h  keyb.cpp  keyb.h  like.cpp  like.h  linux.cpp  love.h  mac.cpp  mac.h  mad.cpp  sad.cpp  sad.h
src/modules/images/include/: bitmap.h  imgencoder.h
src/modules/menu/: CMakeLists.txt  include.mk  menu.cpp  menu.h
src/modules/snake/: board.h  makesnake.mk  snake.cpp  snake.h  snakeboard.cpp  snakeboard.h
src/modules/tetris/: CMakeLists.txt  Makefile  board.cpp  board.h  disp_stuff.cpp  include.mk  maketetris.mk  tetris.cpp  tetris.h  tetrisboard.cpp  tetrisboard.h
src/modules/tetris/include/: board.h  tetris_details.h
src/oldstuff/: battery.h  client-comm.h  dongle.cpp  hardware.cpp  hardware.h  kbclient.cpp  kbclient.h  led_states.cpp  leds.h  sleepstate.cpp
src/tools/: Teensy40-config.cmake  Toolchain-Teensy40-bare.cmake  Toolchain-Teensy40.cmake  adafruit-make-config.json  gen-makefiles.mjs  gen-teensy.mjs  make-af_nrf52.mk.sh  make-teensy.cmd  make-teensy.lin.sh  make-teensy.mac.sh  make-teensy.mk.sh  mock.mk  teensy-make-config.json  teensy.lin  teensy.mac  teensy.mk  teensy.win
src/tools/libs/busio/: CMakeLists.txt
src/tools/libs/eeprom/: CMakeLists.txt
src/tools/libs/gfx/: CMakeLists.txt
src/tools/libs/spi/: CMakeLists.txt
src/tools/libs/st77xx/: CMakeLists.txt
src/tools/libs/wire/: CMakeLists.txt
src/tools/teensy/: Toolchain-Teensy40.cmake  a2cm_teensy40.cmake
src/tools/teensy/teensy40/: CMakeLists.txt  arduino_config.cmake
src/tools/teensy40/: CMakeLists.txt  menu.cmake
src/tools/toolchains/: Teensy40.cmake
